--- a/diego.html
+++ b/diego.html
@@ -4,35 +4,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Diego</title>
+    <!--Link bootstrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="sryles/style.css">
-
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+    crossorigin="anonymous">
+    <!----->
+    <link type="text/css" rel="stylesheet" href="sryles/estilo_perros.css">
 </head>
 <body>
-    <div class="container">
-        <div style="text-align: center;">
-            <ul>
-                <li><a href="pantallaprincipal.html">Inicio</a></li>
-                <li><a href="gatos.html">Gatos</a></li>
-                <li><a href="perros.html">Perros</a></li>
-            </ul>
+    <div class="container-fluid">
+        <ul class="barra_superior">
+            <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
+            <li class="indice"><a href="gatos.html">gatos</a></li>
+            <li class="indice"><a href="perros.html">perros</a></li>
+        </ul>
+        <div class="row">
+           <div class="col-md-12 col-sm-12">
+              <img class="baner" src="img/BANNER.jpg">
+           </div>
+        </div> 
+        <div class="row">
+            <div class="col-md-12 col-sm-12" style="text-align:center">
+                <h1>Perros en adopción</h1>
+                <img style="width: 200px; height:200px" src="img/perro3.jfif">
+                <br>
+                <h2>Diego</h2>
+                <br>
+                <p style="font-family:Arial, Helvetica, sans-serif;
+                font-weight:bold;">Sexo: masculino <br>
+                    Edad: 4 meses <br> Esterilizado: no <br> 
+                    Chip de rastreo: 8768
+                </p>
+            </div>
         </div>
+        <!--Banner inferior, aquí se muestran los datos de contacto-->
+        <div class="row" style="background-color:rgb(27, 108, 0);
+            color:rgb(255, 255, 255)">
+            <div class="col-md-5 col-sm-5">
+                <h1>Contacto</h1>
+                <p>AV Los Michis #1311, Huechuraba, Santiago.</p>
+                <p>+56 9 8221 8600 / +56 9 5648 0868</p>
+                <p>ayudapeludo13@gmail.com</p>
+            </div>
+            <div class="col-md-7 col-sm-7">
+                    <h1 style="text-align: center;">Síguenos</h1>
+                    <ul class="logos_rrss"> 
+                        <li class="iconos">
+                            <a href="https://www.instagram.com" target="_blank"> 
+                                <img style="width:50px;height:50px;" 
+                                src="img/logo_ig.jpg">
+                            </a>
+                        </li>
+                        <li class="iconos">
+                            <a href="https://www.facebook.com" target="_blank">   
+                                <img style="width:50px;height:50px;" 
+                                src="img/logo_fb.jpg">
+                            </a>
+                        </li>
+                        <li class="iconos">
+                            <a href="https://www.tiktok.com" target="_blank"> 
+                                <img style="width:50px;height:50px;" 
+                                src="img/logo_tktk.jpg">
+                            </a>
+                        </li>
+                    </ul> 
+            </div>
+        </div>
+        <!---->
+    </div>
 
-        <div class="container">
-            <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
-        </div>
-    <br>
-    <h1 style="text-align: center;">Diego</h1>
-    <br>
-    <center><img src="img/perro3.jfif" alt="Cliqueame"></center>
-    <h1 style="text-align: center;">Descripcion de Diego</h1>
-    <br>
-    <h3 style="text-align: center;">Sexo: masculino <br>
-        Edad: 4 meses <br> Esterilizado: no <br> Chip de rastreo: 8768</h3>
-    <br>
-    <br>
+    <!--Links bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
     crossorigin="anonymous"></script>
@@ -42,5 +84,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
     crossorigin="anonymous"></script>
+    <!---->
 </body>
 </html>
