--- a/perros.html
+++ b/perros.html
@@ -10,44 +10,82 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
     crossorigin="anonymous">
     <!---->
-    <link type="text/css" rel="stylesheet" href="sryles/style.css">
+    <link type="text/css" rel="stylesheet" href="sryles/estilo_perros.css">
 </head>
 <body>
-    <div class="container">
-        <div style="text-align: center;">
-            <ul>
-                <li><a href="pantallaprincipal.html">Inicio</a></li>
-                <li><a href="gatos.html">Gatos</a></li>
-                <li><a href="perros.html">Perros</a></li>
-            </ul>
-        <div class="container">
-            <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
+  <div class="container-fluid">
+    <ul class="barra_superior">
+        <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
+        <li class="indice"><a href="gatos.html">gatos</a></li>
+        <li class="indice"><a href="perros.html">perros</a></li>
+    </ul>
+    <div class="row">
+        <div class="col-md-12 col-sm-12">
+            <img class="baner" src="img/BANNER.jpg">
         </div>
-        <div class="row">
-            <div class="col-12" style="text-align: center;">
-                <p><h3> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
-                    rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
-                    de esterilización y jornadas de adopción todas las semanas. Todos los perros 
-                    que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
-                    de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-                    en espera de su adopción definitiva.</h3> </p> 
-                <h1>Perros en adopción</h1>
-                <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
-                <br>
-                <a href="pedro.html" style="color:rgb(0,0,0)">Pedro</a>
-                <br>
-                <br>
-                <img style="width:200px;height:200px;" src="img/perro2.jpg">
-                <br>
-                <a href="juan.html" style="color:rgb(0,0,0)">Juan</a>
-                <br>
-                <br>
-                <img style="width:200px;height:200px" src="img/perro3.jfif">
-                <br>
-                <a href="diego.html" style="color:rgb(0,0,0)">Diego</a>
-            </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 col-sm-12" style="text-align: center;">
+            <p> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
+                rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
+                de esterilización y jornadas de adopción todas las semanas. Todos los perros 
+                que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
+                de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
+                en espera de su adopción definitiva. </p> 
+            <h1>Perros en adopción</h1>
+            <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
+            <br>
+            <a href="pedro.html" target="_blank" style="color:rgb(0,0,0);
+            font-weight:bold">Pedro</a>
+            <br>
+            <br>
+            <img style="width:200px;height:200px;" src="img/perro2.jpg">
+            <br>
+            <a href="juan.html" target="_blank" style="color:rgb(0,0,0);
+            font-weight:bold">Juan</a>
+            <br>
+            <br>
+            <img style="width:200px;height:200px" src="img/perro3.jfif">
+            <br>
+            <a href="diego.html" target="_blank" style="color:rgb(0,0,0);
+            font-weight:bold">Diego</a>
+            <br>
         </div>
     </div>  
+    <!--Banner inferior, aquí se muestran los datos de contacto-->
+    <div class="row" style="background-color:rgb(27, 108, 0);
+          color:rgb(255, 255, 255)">
+        <div class="col-md-5 col-sm-5">
+            <h1>Contacto</h1>
+            <p>AV Los Michis #1311, Huechuraba, Santiago.</p>
+            <p>+56 9 8221 8600 / +56 9 5648 0868</p>
+            <p>ayudapeludo13@gmail.com</p>
+        </div>
+        <div class="col-md-7 col-sm-7">
+            <h1 style="text-align: center;">Síguenos</h1>
+            <ul class="logos_rrss"> 
+                <li class="iconos">
+                    <a href="https://www.instagram.com" target="_blank"> 
+                        <img style="width:50px;height:50px;" 
+                        src="img/logo_ig.jpg">
+                    </a>
+                </li>
+                <li class="iconos">
+                    <a href="https://www.facebook.com" target="_blank">   
+                        <img style="width:50px;height:50px;" 
+                        src="img/logo_fb.jpg">
+                    </a>
+                </li>
+                <li class="iconos">
+                    <a href="https://www.tiktok.com" target="_blank"> 
+                        <img style="width:50px;height:50px;" 
+                        src="img/logo_tktk.jpg">
+                    </a>
+                </li>
+            </ul> 
+        </div>
+    </div>
+    <!---->
   </div>   
   <!--Links bootstrap JS-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
