--- a/gatos.html
+++ b/gatos.html
@@ -14,13 +14,12 @@
 
 
 <body>
-    <div class="container">
-        <div style="text-align: center;">
-            <ul>
-                <li><a href="pantallaprincipal.html">Inicio</a></li>
-                <li><a href="gatos.html">Gatos</a></li>
-                <li><a href="perros.html">Perros</a></li>
-            </ul>
+    <div class="container-fluid">
+        <ul class="barra_superior">
+            <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
+            <li class="indice"><a href="gatos.html">gatos</a></li>
+            <li class="indice"><a href="perros.html">perros</a></li>
+        </ul>
             
             <div class="container">
                 <img src="img/banner.jfif"class="tamanio_banner"  alt="#">
