--- a/juan.html
+++ b/juan.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juan</title>
+    <title>Perros - Juan</title>
     <!--Link bootstrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
     crossorigin="anonymous">
     <!----->
     <link type="text/css" rel="stylesheet" href="styles/estilo_perros.css">
+    <!-- Icono de la pestaña-->
+    <link rel="shortcut icon" href="img/icono_dos.ico">
 </head>
 <body>
     <div class="container-fluid">
@@ -21,7 +23,7 @@
         </ul>
         <div class="row">
            <div class="col-md-12 col-sm-12">
-              <img class="baner" src="img/banner.jfif">
+              <img class="baner" src="img/aver.jpg">
            </div>
         </div> 
         <div class="row">
