--- a/maximiliano.html
+++ b/maximiliano.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gatos - Maximiliano</title>
+    <!--Link Bootstrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!---->
     <link type="text/css" rel="stylesheet" href="styles/stylegatos.css">
+    <!-- Icono de la pestaña-->
+    <link rel="shortcut icon" href="img/icono_dos.ico">
 </head>
 <body>
     <div class="container-fluid">
@@ -18,7 +22,7 @@
         </ul>
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <img class="baner" src="img/banner.jfif">
+                <img class="baner" src="img/aver.jpg">
             </div>
         </div>
         <div class="row">
@@ -34,42 +38,42 @@
                 Chip de rastreo: 1984
                 </p>
             </div>
+        </div>  
+        <!--Banner inferior, aquí se muestran los datos de contacto-->
+        <div class="row" style="background-color:rgb(27, 108, 0);
+             color:rgb(255, 255, 255)">
+                <div class="col-md-5 col-sm-5">
+                    <h1>Contacto</h1>
+                    <p>AV Los Michis #1311, Huechuraba, Santiago.</p>
+                    <p>+56 9 8221 8600 / +56 9 5648 0868</p>
+                    <p>ayudapeludo13@gmail.com</p>
+                </div>
+                <div class="col-md-7 col-sm-7">
+                    <h1 style="text-align: center;">Síguenos</h1>
+                    <ul class="logos_rrss"> 
+                        <li class="iconos">
+                            <a href="https://www.instagram.com" target="_blank"> 
+                                <img style="width:50px;height:50px;"                   
+                                src="img/logo_ig.jpg">
+                            </a>
+                        </li>
+                        <li class="iconos">
+                            <a href="https://www.facebook.com" target="_blank">   
+                                <img style="width:50px;height:50px;" 
+                                src="img/logo_fb.jpg">
+                            </a>
+                        </li>
+                        <li class="iconos">
+                            <a href="https://www.tiktok.com" target="_blank"> 
+                                <img style="width:50px;height:50px;" 
+                                src="img/logo_tktk.jpg">
+                            </a>
+                        </li>
+                    </ul> 
+                </div>
         </div>
-    </div>    
-     <!--Banner inferior, aquí se muestran los datos de contacto-->
-     <div class="row" style="background-color:rgb(27, 108, 0);
-     color:rgb(255, 255, 255)">
-        <div class="col-md-5 col-sm-5">
-            <h1>Contacto</h1>
-            <p>AV Los Michis #1311, Huechuraba, Santiago.</p>
-            <p>+56 9 8221 8600 / +56 9 5648 0868</p>
-            <p>ayudapeludo13@gmail.com</p>
-        </div>
-        <div class="col-md-7 col-sm-7">
-            <h1 style="text-align: center;">Síguenos</h1>
-            <ul class="logos_rrss"> 
-                <li class="iconos">
-                    <a href="https://www.instagram.com" target="_blank"> 
-                        <img style="width:50px;height:50px;"                   
-                        src="img/logo_ig.jpg">
-                    </a>
-                </li>
-                <li class="iconos">
-                    <a href="https://www.facebook.com" target="_blank">   
-                        <img style="width:50px;height:50px;" 
-                        src="img/logo_fb.jpg">
-                    </a>
-                </li>
-                <li class="iconos">
-                    <a href="https://www.tiktok.com" target="_blank"> 
-                        <img style="width:50px;height:50px;" 
-                        src="img/logo_tktk.jpg">
-                    </a>
-                </li>
-            </ul> 
-        </div>
-    </div>
-    <!---->
+        <!---->
+    </div>  
     <!--Links bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
