--- a/perros.html
+++ b/perros.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perros</title>
+    <title>Ayuda a un Peludo - Perros</title>
     <!--Link bootstrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
     crossorigin="anonymous">
     <!---->
     <link type="text/css" rel="stylesheet" href="styles/estilo_perros.css">
+    <!--Fuente Roboto Slab-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
+    <!---->
+    <!-- Icono de la pestaña-->
+    <link rel="shortcut icon" href="img/icono_dos.ico">
 </head>
 <body>
   <div class="container-fluid">
@@ -21,17 +28,18 @@
     </ul>
     <div class="row">
         <div class="col-md-12 col-sm-12">
-            <img class="baner" src="img/banner.jfif">
+            <img class="baner" src="img/aver.jpg">
         </div>
     </div>
-    <div class="row" style="font-family:Arial, Helvetica, sans-serif;">
-        <div class="col-md-12 col-sm-12" style="text-align: center;">
-            <p><H3> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
+    <div class="row" style="font-family: 'Roboto Slab', serif;">
+        <div class="col-md-12 col-sm-12" style="text-align: center;padding:10px;">
+            <p> Ayuda a un Peludo es una organización sin fines de lucro, dedicada al rescate, 
                 rehabilitación y reubicación de Perros abandonados. Realizamos, operativos 
                 de esterilización y jornadas de adopción todas las semanas. Todos los perros 
                 que entrega están esterilizados desde los dos meses de edad. Mantiene dos albergues 
                 de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
-                en espera de su adopción definitiva. </H3></p> 
+                en espera de su adopción definitiva.
+            </p> 
             <h1>Perros en adopción</h1>
             <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
             <br>
